--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 6.3
+ * @version 6.4
 */
 
 .avatarDecoration_ec86aa {
@@ -1434,16 +1434,16 @@ textarea,
 
 .activity_a31c43,
 .membersGroup_cbd271,
-.container_e9f61e,
+.container_d808b0,
 .cozy_f9f2ca .timestamp_f9f2ca {
     color: white;
 }
 
-.clickable_e9f61e:hover .layout_e9f61e {
+.clickable_d808b0:hover .layout_d808b0 {
     background-color: rgba(0, 0, 0, 0.21);
 }
 
-.selected_e9f61e .layout_e9f61e,
+.selected_d808b0 .layout_d808b0,
 .categoryItem_c72b37.selectedCategoryItem_c72b37 .itemInner_c72b37 {
     background-color: rgba(0, 0, 0, 0.41);
 }
@@ -1624,7 +1624,7 @@ textarea,
     box-shadow: none;
 }
 
-.role_deddac {
+.role_d70de6 {
     color: white;
     background-color: transparent;
 }
@@ -2205,6 +2205,12 @@ textarea,
     color: white;
 }
 
+.contentWrapper_f7506e {
+    background-color: rgba(0, 0, 0, .6);  
+    box-shadow: none;
+}
+  
+
 .quickSelectLabel_abbf45 {
     opacity: 1;
 }
@@ -2245,7 +2251,7 @@ textarea,
     border: none;
 }
 
-.container_cc72c1,
+.container_a5ad5c,
 .peopleListItem_d51464 .discordTag_f3939d .username_f3939d,
 .subtext_f3939d,
 .title_a1cafe {
@@ -2389,7 +2395,7 @@ textarea,
 }
 
 .icon_de3e42,
-.button_ef319f {
+.button_f7e168 {
     color: white;
 }
 
@@ -2407,13 +2413,13 @@ textarea,
     box-shadow: none;
 }
 
-.wrapper_ef319f {
+.wrapper_f7e168 {
     background-color: #008c99;
     border-radius: 0;
 }
 
-.button_ef319f:hover,
-.button_ef319f.selected_ef319f {
+.button_f7e168:hover,
+.button_f7e168.selected_f7e168 {
     color: white;
     background-color: rgba(0, 0, 0, 0.4);
 }
@@ -3752,7 +3758,7 @@ textarea,
     background-color: transparent;
 }
 
-.activityItem_d46b95 {
+.container_e5da8b {
     background: rgba(0,0,0,.6) !important;
     box-shadow: none;
 }
