--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 4.1
+ * @version 4.2
 */
 
 /* Ram Main Picture */
@@ -1419,6 +1419,12 @@
     color: white !important;
 }
 
+.contentWrapper_f7506e {
+    background-color: rgba(0, 0, 0, .6);  
+    box-shadow: none;
+}
+  
+
 .mention {
     border-radius: 4px;
     padding: 0 6px;
@@ -1645,7 +1651,7 @@
     font-weight: 600;
 }
 
-.privateChannelsHeaderContainer_c47fa9.container_cc72c1 {
+.privateChannelsHeaderContainer_c47fa9.container_a5ad5c {
     color: white;
 }
 
@@ -1653,14 +1659,14 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-button.button_f67531 {
+button.button_adca65 {
     border-radius: 7px;
     background-color: transparent;
     border: 1px solid transparent;
     color: white;
 }
 
-button.button_f67531.enabled_f67531:hover {
+button.button_adca65.enabled_adca65:hover {
     color: white;
     background-color: transparent;
     border: 1px solid #f3acc5;
@@ -2107,21 +2113,21 @@ button.button_f67531.enabled_f67531:hover {
     color: white;
 }
 
-.wrapper_ef319f {
+.wrapper_f7e168 {
     background-color: #f3acc5;
     box-shadow: none;
 }
 
-.button_ef319f {
+.button_f7e168 {
     color: white;
 }
 
-.button_ef319f:hover {
+.button_f7e168:hover {
     color: white;
     background-color: rgba(0, 0, 0, .2);
 }
 
-.button_ef319f.selected_ef319f {
+.button_f7e168.selected_f7e168 {
     background-color: rgba(0, 0, 0, .2);
 }
 
@@ -2447,37 +2453,37 @@ button.button_f67531.enabled_f67531:hover {
     background-color: #f3acc5;
 }
 
-.layout_e9f61e,
-.container_e9f61e {
+.layout_d808b0,
+.container_d808b0 {
     border-radius: 4px;
 }
 
 .categoryItem_c72b37,
-.clickable_e9f61e.container_e9f61e:hover, 
-.clickable_e9f61e.container_e9f61e:hover .muted_e9f61e {
+.clickable_d808b0.container_d808b0:hover, 
+.clickable_d808b0.container_d808b0:hover .muted_e9f61e {
     color: white;
 }
 
-.clickable_e9f61e:hover .layout_e9f61e {
+.clickable_d808b0:hover .layout_d808b0 {
     background-color: rgba(255, 255, 255, .2);
 }
 
-.clickable_e9f61e:hover .layout_e9f61e .username_d272d6,
-.clickable_e9f61e:hover .layout_e9f61e .activity_a31c43 {
+.clickable_d808b0:hover .layout_d808b0 .name_a31c43,
+.clickable_d808b0:hover .layout_d808b0 .activity_a31c43 {
     color: white !important;
 }
 
 .categoryItem_c72b37.selectedCategoryItem_c72b37 .itemInner_c72b37,
-.selected_e9f61e .layout_e9f61e {
+.selected_d808b0 .layout_d808b0 {
     background-color: #f3acc5;
 }
 
-.selected_e9f61e .layout_e9f61e .username_d272d6,
-.selected_e9f61e .layout_e9f61e .activity_a31c43 {
+.selected_d808b0 .layout_d808b0 .name_a31c43,
+.selected_d808b0 .layout_d808b0 .activity_a31c43 {
     color: black !important;
 }
 
-.selected_e9f61e .layout_e9f61e .botTagRegular_a9e77f {
+.selected_d808b0 .layout_d808b0 .botTagRegular_a9e77f {
     border: 1px solid black;
 }
 
@@ -2516,7 +2522,7 @@ button.button_f67531.enabled_f67531:hover {
     border-color: #f3acc5;
 }
 
-.membersGroup_cbd271.container_cc72c1 {
+.membersGroup_cbd271.container_a5ad5c {
     color: white;
 }
 
@@ -2804,7 +2810,7 @@ button.button_f67531.enabled_f67531:hover {
 }
 
 .wrapper_a08117,
-.wrapper_a08117 .container_cc72c1 {
+.wrapper_a08117 .container_a5ad5c {
     color: white;
 }
 
@@ -2894,7 +2900,7 @@ button.button_f67531.enabled_f67531:hover {
     background-color: rgba(243, 172, 197, .3);
 }
 
-#app-mount .role_deddac {
+#app-mount .role_d70de6 {
     padding: 5px 10px;
     background-color: rgba(0,0,0,.5);
 }
@@ -3667,7 +3673,7 @@ button.button_f67531.enabled_f67531:hover {
     background-color: transparent;
 }
 
-.activityItem_d46b95 {
+.container_e5da8b {
     background: rgba(0,0,0,.6) !important;
     box-shadow: none;
 }
