--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 6.7
+ * @version 6.8
  */
 
 /* Main Background */
@@ -209,6 +209,12 @@
 .countContainer_a6d69a {
     background-color: #912;
 }
+
+.contentWrapper_f7506e {
+    background-color: rgba(0, 0, 0, .6);  
+    box-shadow: none;
+}
+  
 
 /* Add shade to background */
 .layers_a01fb1 {
@@ -1625,22 +1631,22 @@
    color: #AEC4D4;
 }
 
-.nonMediaMosaicItem_e5c1dc {
+.nonMediaMosaicItem_d0395d {
     outline: none;
 }
 
-.hoverButtonGroup_e5c1dc {
+.hoverButtonGroup_d0395d {
     background-color: #912;
 }
 
-.hoverButton_e5c1dc {
+.hoverButton_d0395d {
     color: silver;
 }
 
 .removeAttachmentHoverButton__161a2:hover, 
 .keyboard-mode .removeAttachmentHoverButton__161a2:focus,
-.hoverButton_e5c1dc:hover, 
-.keyboard-mode .hoverButton_e5c1dc:focus {
+.hoverButton_d0395d:hover, 
+.keyboard-mode .hoverButton_d0395d:focus {
     background-color: #C13;
     color: white;
 }
@@ -1919,18 +1925,18 @@
     border-bottom: none;
 }
 
-button.button_f67531 {
+button.button_adca65 {
     color: white;
 }
 
-button.button_f67531.enabled_f67531:hover, 
-span.button_f67531.enabled_f67531:hover {
+button.button_adca65.enabled_adca65:hover, 
+span.button_adca65.enabled_adca65:hover {
     color: white;
     background-color: #C13;
 }
 
-button.button_f67531.enabled_f67531:hover path,
-span.button_f67531.enabled_f67531:hover path {
+button.button_adca65.enabled_adca65:hover path,
+span.button_adca65.enabled_adca65:hover path {
   fill: white;
 }
 
@@ -2205,23 +2211,23 @@ span.button_f67531.enabled_f67531:hover path {
     font-size: 15px;
 }
 
-.clickable_e9f61e.container_e9f61e:hover,
-.clickable_e9f61e.container_e9f61e:hover .muted_e9f61e {
+.clickable_d808b0.container_d808b0:hover,
+.clickable_d808b0.container_d808b0:hover .muted_e9f61e {
     color: white;
 }
 
-.clickable_e9f61e:hover .layout_e9f61e {
+.clickable_d808b0:hover .layout_d808b0 {
     background-color: rgba(204, 17, 51, .24);
 }
 
-.clickable_e9f61e:active .layout_e9f61e,
-.selected_e9f61e .layout_e9f61e {
+.clickable_d808b0:active .layout_d808b0,
+.selected_d808b0 .layout_d808b0 {
     background-color: rgba(204, 17, 51, .54);
 }
 
-.clickable_e9f61e.container_e9f61e:active,
-.highlighted_e9f61e.container_e9f61e,
-.selected_e9f61e.container_e9f61e {
+.clickable_d808b0.container_d808b0:active,
+.highlighted_d808b0.container_d808b0,
+.selected_d808b0.container_d808b0 {
     color: white;
 }
 
@@ -2281,12 +2287,12 @@ span.button_f67531.enabled_f67531:hover path {
     background-color: rgba(153, 17, 33, .43);
 }
 
-.button_ef319f,
+.button_f7e168,
 .icon_de3e42 {
     color: white;
 }
 
-.wrapper_ef319f,
+.wrapper_f7e168,
 .toolbar_de3e42 {
     background-color: #912;
     box-shadow: none;
@@ -2302,8 +2308,8 @@ span.button_f67531.enabled_f67531:hover path {
     border-radius: 6px 0 0 6px;
 }
 
-.button_ef319f:hover,
-.button_ef319f.selected_ef319f {
+.button_f7e168:hover,
+.button_f7e168.selected_f7e168 {
     color: white;
     background-color: #C13;
 }
@@ -2651,7 +2657,7 @@ span.button_f67531.enabled_f67531:hover path {
     color: white;
 }
 
-.wrapper_a08117 .container_cc72c1 {
+.wrapper_a08117 .container_a5ad5c {
     color: white;
 }
 
@@ -2794,7 +2800,7 @@ span.button_f67531.enabled_f67531:hover path {
     border: 2px inset #C13;
 }
 
-#app-mount .role_deddac {
+#app-mount .role_d70de6 {
     padding: 4px 13px;
     color: white;
     background-color: rgba(0, 0, 0, .7);
@@ -4115,7 +4121,7 @@ span.button_f67531.enabled_f67531:hover path {
     background-color: transparent;
 }
 
-.activityItem_d46b95 {
+.container_e5da8b {
     background: rgba(0, 0, 0, .6) !important;
     box-shadow: none;
 }
